fixed link spacing in historic section

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
   		background-color: #FFD6A3;
   		color: #e0702b;
   		border: 2px #ffc299;
-  		padding: 10px 20px;
+  		padding: 10px 10px;
   		text-align: center;
   		text-decoration: none;
   		display: inline-block;
